<resources>
    <string name="app_name">Diakonapp</string>
    <string name="section_title_user_profile">Profile</string>
    <string name="section_title_rewards">Rewards</string>
    <string name="institution_detail">Institution Detail</string>
    <string name="new_donation_activity_title">New Donation</string>
    <string name="user_profile_title">Profile</string>
    <string name="user_profile_points_label">points</string>
    <string name="user_profile_donations_label">donations</string>
    <string name="user_profile_tab_recent_label">Recent donations</string>
    <string name="user_profile_tab_favorites_label">Favorites</string>
    <string name="tab_category1">Category 1</string>
    <string name="tab_category2">Category 2</string>
    <string name="tab_category3">Category 3</string>
    <string name="action_logout">Logout</string>
    <string name="action_about">About</string>
    <string name="add_button">Añadir</string>
    <string name="update_button">Actualizar</string>
    <string name="delete_button">borrar</string>
    <string name="fab">Añadir</string>
    <string name="title_activity_transition_edit">Editar Nombre Activity</string>
    <string name="title_activity_transition_add">Añadir Nombre Activity</string>
    <string name="log_out">log out</string>
    <string name="revoke">revocar</string>
    <string name="cardsCall">Call</string>
    <string name="cardsOpenInMaps">Open in Maps</string>
    <string name="cardsDonate">Donate</string>
    <string name="donation_institutionHint">Institution</string>
    <string name="donation_titleHint">Description</string>
    <string name="donation_titleHelp">¿What are you donating today?</string>
    <string name="donation_quantityHint">Quantity</string>
    <string name="donation_quantityHelp">¿How Many?</string>
    <string name="donation_unitHint">Unit</string>
    <string name="donation_unitHelp">Weight/Volume</string>
    <string-array name="units_array">
        <item>g</item>
        <item>kg</item>
        <item>lb</item>
        <item>oz</item>
        <item>mL</item>
    </string-array>
    <string-array name="names_array">
        <item>Miguel</item>
        <item>Juliana</item>
        <item>Cristobal</item>
        <item>Amy</item>
        <item>Jason</item>
        <item>Melissa</item>
        <item>David</item>
        <item>Michelle</item>
        <item>James</item>
        <item>Kimberly</item>
        <item>Juan</item>
        <item>Lisa</item>
        <item>Roberto</item>
        <item>Ángela</item>
        <item>Brian</item>
        <item>Emilio</item>
        <item>Bárbara</item>
        <item>Estefanía</item>
        <item>Mateo</item>
        <item>Nicole</item>
        <item>José</item>
        <item>Jessica</item>
        <item>Daniel</item>
        <item>Elizabeth</item>
        <item>Kevin</item>
        <item>Rebeca</item>
        <item>Enrique</item>
        <item>Kelly</item>
        <item>Jeffrey</item>
        <item>Mary</item>
        <item>Ricardo</item>
        <item>Christina</item>
        <item>Scott</item>
        <item>Amanda</item>
        <item>Mark</item>
        <item>Julie</item>
        <item>Tomás</item>
        <item>Laura</item>
        <item>Tadeo</item>
        <item>Shannon</item>
        <item>Anthony</item>
        <item>Christine</item>
        <item>Carlos</item>
        <item>Tamara</item>
        <item>Joshua</item>
        <item>Tracy</item>
        <item>Ryan</item>
        <item>Karen</item>
        <item>Jeremy</item>
        <item>Daniel</item>
    </string-array>
    <string-array name="instituciones">
        <item>ASOCIACION DE MUJERES ICW-ECUADOR</item>
        <item>ASOCIACION SOCIAL MAS QUE VENCEDORES</item>
        <item>APINNA ISLA TRINITARIA</item>
        <item>APRENDIENDO A VIVIR CON DIABETES</item>
        <item>APINNA NUEVA PROSPERINA</item>
        <item>ASVOLH  EN EL ALBERGUE</item>
        <item>CASA DEL HOMBRE DOLIENTE</item>
        <item>CENTRO MEDICO MARIANA DE JESUS</item>
        <item>CENTRO EVANGELISTICO MISIONERO APOCALIPSIS</item>
        <item>Centro De Rehabilitacion Sembradores De Vida (Ciudadela Reeducativa San Pablo II )</item>
        <item>COMITÉ PRO-MEJORAS LAS AMERICAS</item>
        <item>CONGREGACION RELIGIOSA DE ESCLAVAS DEL SAGRADO CORAZON DE JESUS</item>
        <item>CORPORACION COMPARTIR</item>
        <item>CORPORACION RELIGIOSA SAGRADOS CORAZONES  HIJAS DE JESUS Y MARIA</item>
        <item>EL BUEN PASTOR</item>
        <item>EVANGELICA DISCIPULOS DE JESUCRISTO</item>
        <item>EL BUEN SAMARITANO</item>
        <item>FUNDACION JUSTO Y NECESARIO</item>
        <item>FUNDACION CLEMENCIA</item>
        <item>FUNDACION SIN BARRERAS</item>
        <item>FUNDACION DE AYUDA SOCIAL ESPIRITU SOLIDARIO</item>
        <item>FUNDACION PARA LA INCLUSION MELVIN JONES</item>
        <item>FUNDACION UN PRESENTE DIFERENTE</item>
        <item>IGLESIA CRISTIANA NAZARENO</item>
        <item>IGLESIA CRISTIANA PLENITUD DE DIOS</item>
        <item>IGLESIA EVANGELICA APOSTOLICA DEL NOMBRE DE JESUS</item>
        <item>IGLESIA SANTIAGO EL MENOR (NARCISA DEL JESUS</item>
        <item>LOS CHAVITOS</item>
        <item>LUCHA Y PROGRESO</item>
        <item>NOS NECESITAN ECUADOR</item>
        <item>MADRE DOLOROSA</item>
        <item>MARIA MONTESSORI</item>
        <item>MUJERES PROGRESISTAS( SECTOR NIGERIA)</item>
        <item>NUESTRA SEÑORA DE LA VISITACION</item>
        <item>PADRE DAMIAN</item>
        <item>PARROQUIA BASTION DE MARIA</item>
        <item>PARROQUIA SAN AGUSTIN</item>
        <item>PARROQUIA SANTO TOMAS APOSTOL</item>
        <item>PARROQUIA SEÑOR DE LA BUENA ESPERANZA</item>
        <item>PARROQUIAS NUESTRA SEÑORA DE LORETO</item>
        <item>PROLABORE DEI EN LA LADRILLERA</item>
        <item>PURO CORAZON</item>
        <item>REMAR ECUADOR</item>
        <item>SANTISIMA TRINIDAD - TARIFA</item>
        <item>SALVADOS POR JESUCRISTO</item>
        <item>SOCORRO DE LO ALTO DEL ECUADOR (MICESA)</item>
        <item>SIERVAS DEL HOGAR DE LA MADRE</item>
        <item>SISTEMA NUEVO MUNDO DEL ECUADOR</item>
        <item>UNIDAD EDUCATIVA MUESTRA MADRE DE LA ALBORADA</item>

    </string-array>
    <string-array name="asistencia">

        <item>COMEDOR</item>
        <item>COMEDOR</item>
        <item>COMEDOR</item>
        <item>REFRIGERIOS</item>
        <item>ENTREGA DE VIVERES</item>
        <item>COMEDOR</item>
        <item>COMEDOR</item>
        <item>REFRIGERIOS</item>
        <item>COMEDOR</item>
        <item>COMEDOR</item>
        <item>COMEDOR</item>
        <item>COMEDOR</item>
        <item>COMEDOR</item>
        <item>COMEDOR</item>
        <item>ENTREGA DE VIVERES</item>
        <item>COMEDOR</item>
        <item>COMEDOR</item>
        <item>COMEDOR</item>
        <item>COMEDOR</item>
        <item>COMEDOR</item>
        <item>COMEDOR</item>
        <item>COMEDOR</item>
        <item>COMEDOR</item>
        <item>COMEDOR</item>
        <item>COMEDOR</item>
        <item>ENTREGA DE VIVERES</item>
        <item>REFRIGERIOS</item>
        <item>COMEDOR</item>
        <item>ENTREGA DE VIVERES</item>
        <item>COMEDOR</item>
        <item>REFRIGERIOS</item>
        <item>REFRIGERIOS</item>
        <item>ENTREGA DE VIVERES</item>
        <item>ENTREGA DE VIVERES</item>
        <item>COMEDOR</item>
        <item>COMEDOR</item>
        <item>COMEDOR</item>
        <item>ENTREGA DE VIVERES</item>
        <item>ENTREGA DE VIVERES</item>
        <item>ND</item>
        <item>ENTREGA DE VIVERES</item>
        <item>COMEDOR</item>
        <item>COMEDOR</item>
        <item>REFRIGERIOS</item>
        <item>COMEDOR</item>
        <item>COMEDOR</item>
        <item> COMEDOR</item>
        <item>COMEDOR</item>
        <item>ENTREGA DE VIVERES</item>

    </string-array>
    <string-array name="cantidadPersonasAtendidas">
        <item>	140	</item>
        <item>	100	</item>
        <item>	495	</item>
        <item>	112	</item>
        <item>	80	</item>
        <item>	100	</item>
        <item>	105	</item>
        <item>	100	</item>
        <item>	426	</item>
        <item>	300	</item>
        <item>	755	</item>
        <item>	320	</item>
        <item>	165	</item>
        <item>	128	</item>
        <item>	360	</item>
        <item>	902	</item>
        <item>	100	</item>
        <item>	66	</item>
        <item>	100	</item>
        <item>	60	</item>
        <item>	283	</item>
        <item>	615	</item>
        <item>	220	</item>
        <item>	200	</item>
        <item>	1,621	</item>
        <item>	167	</item>
        <item>	180	</item>
        <item>	150	</item>
        <item>	360	</item>
        <item>	80	</item>
        <item>	868	</item>
        <item>	2636	</item>
        <item>	370	</item>
        <item>	80	</item>
        <item>	58	</item>
        <item>	190	</item>
        <item>	500	</item>
        <item>	168	</item>
        <item>	75	</item>
        <item>	74	</item>
        <item>	230	</item>
        <item>	103	</item>
        <item>	55	</item>
        <item>	60	</item>
        <item>	919	</item>
        <item>	297	</item>
        <item>	100	</item>
        <item>	1985	</item>
        <item>	145	</item>

    </string-array>
    <string-array name="poblacionAtendida">
        <item>	NIÑOS, JOVENES Y ADULTOS	</item>
        <item>	NIÑOS Y JOVENES 	</item>
        <item>	NIÑOS	</item>
        <item>	NIÑOS Y JOVENES 	</item>
        <item>	NIÑOS 	</item>
        <item>	ADULTOS Y NIÑOS	</item>
        <item>	ADULTOS MAYORES	</item>
        <item>	NIÑOS JOVENES Y ADULTOS	</item>
        <item>	NIÑOS Y JOVENES 	</item>
        <item>	ADULTOS	</item>
        <item>	NIÑOS	</item>
        <item>	NIÑOS Y ADOLESCENTES	</item>
        <item>	NIÑOS Y ADULTOS	</item>
        <item>	ADULTOS 	</item>
        <item>	NIÑOS	</item>
        <item>	NIÑOS	</item>
        <item>	NIÑAS Y ADULTOS	</item>
        <item>	NIÑOS	</item>
        <item>	ADULTOS MAYORES	</item>
        <item>	NINOS CON DISCAPACIDAAD SEVERA	</item>
        <item>	NIÑOS	</item>
        <item>	NIÑOS - JOVENES Y ADULTOS MAYORES	</item>
        <item>	NIÑOS Y FAMILIAS	</item>
        <item>	NIÑOS	</item>
        <item>	NIÑOS Y ADOLESCENTES	</item>
        <item>	NIÑOS	</item>
        <item>	NIÑOS	</item>
        <item>	NIÑOS	</item>
        <item>	JOVENES Y NIÑOS POBLACION FLOTANTE	</item>
        <item>	ADULTOS	</item>
        <item>	NIÑOS	</item>
        <item>	NIÑOS	</item>
        <item>	FAMILIAS	</item>
        <item>	NIÑOS-JOVENES Y ADULTOS	</item>
        <item>	ADULTOS	</item>
        <item>	NIÑOS, JOVENES Y ADULTOS 	</item>
        <item>	NIÑOS Y JOVENES 	</item>
        <item>	ADULTOS	</item>
        <item>	NIÑOS Y ADULTOS	</item>
        <item>	ADULTOS	</item>
        <item>	NIÑOS 80 MADRES	</item>
        <item>	NIÑOS Y ADULTOS MAYORES	</item>
        <item>	NIÑOS Y ADOLECENTES	</item>
        <item>	FAMILIAS	</item>
        <item>	NIÑOS Y ADOLESCENTES	</item>
        <item>	NIÑOS, JOVENES Y ADULTOS 	</item>
        <item>	NIÑOS,JOVENES Y ADULTOS	</item>
        <item>	NIÑOS, ADULTOS Y MAYORES	</item>
        <item>	MADRES Y PERSONAL DOCENTE	</item>


    </string-array>
</resources>