<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:context=".UserProfileFragment">


    <!-- TODO: Update blank fragment layout -->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/profile_contraint_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/appbar_padding_top"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/profile_user_toolbar_id"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:fitsSystemWindows="true"
                android:background="?attr/colorPrimary"
                android:title="Profile"
                />

        </android.support.design.widget.AppBarLayout>


        <View
            android:id="@+id/profile_white_container_id"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:background="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appbar" />

        <android.support.v7.widget.CardView
            android:id="@+id/profile_user_circle_card_id"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:elevation="12dp"
            android:innerRadius="0dp"
            android:shape="ring"
            android:thicknessRatio="1.9"
            app:cardCornerRadius="60dp"
            app:layout_constraintEnd_toEndOf="@+id/profile_white_container_id"
            app:layout_constraintStart_toStartOf="@+id/profile_white_container_id"
            app:layout_constraintTop_toTopOf="@+id/profile_white_container_id">

            <ImageView
                android:id="@+id/profile_user_picture_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                app:srcCompat="@drawable/icono_diakonia_256px" />

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/profile_user_name_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/profile_white_container_id"
            app:layout_constraintStart_toStartOf="@+id/profile_white_container_id"
            app:layout_constraintTop_toBottomOf="@+id/profile_user_circle_card_id" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/profile_user_location_id"
            app:layout_constraintStart_toStartOf="@+id/profile_white_container_id"
            app:layout_constraintTop_toBottomOf="@+id/profile_user_name_id"
            app:srcCompat="@drawable/ic_location_on_grey_24dp" />

        <TextView
            android:id="@+id/profile_user_location_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="150dp"
            android:layout_marginRight="150dp"
            android:text="Guayaquil"
            app:layout_constraintBottom_toBottomOf="@+id/imageView8"
            app:layout_constraintEnd_toEndOf="@+id/profile_white_container_id"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toTopOf="@+id/imageView8" />

        <TextView
            android:id="@+id/profile_user_points_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:text=""
            android:textSize="24dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/profile_user_donations_id"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/profile_white_container_id"
            app:layout_constraintTop_toBottomOf="@+id/imageView8" />

        <TextView
            android:id="@+id/profile_user_points_label_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/user_profile_points_label"
            app:layout_constraintEnd_toEndOf="@+id/profile_user_points_id"
            app:layout_constraintStart_toStartOf="@+id/profile_user_points_id"
            app:layout_constraintTop_toBottomOf="@+id/profile_user_points_id" />


        <View
            android:id="@+id/vDivider_user_profile_id"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorGrey"
            app:layout_constraintBottom_toBottomOf="@+id/profile_user_donations_label_id"
            app:layout_constraintEnd_toEndOf="@+id/profile_white_container_id"
            app:layout_constraintStart_toStartOf="@+id/profile_white_container_id"
            app:layout_constraintTop_toTopOf="@+id/profile_user_points_id" />

        <TextView
            android:id="@+id/profile_user_donations_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text=""
            android:textSize="24dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/profile_user_points_id"
            app:layout_constraintEnd_toEndOf="@+id/profile_white_container_id"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/profile_user_points_id"
            app:layout_constraintTop_toTopOf="@+id/profile_user_points_id"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/profile_user_donations_label_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/user_profile_donations_label"
            app:layout_constraintEnd_toEndOf="@+id/profile_user_donations_id"
            app:layout_constraintStart_toStartOf="@+id/profile_user_donations_id"
            app:layout_constraintTop_toBottomOf="@+id/profile_user_donations_id" />


        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_white_container_id">

            <android.support.design.widget.TabItem
                android:id="@+id/profile_tab_recent_label_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_profile_tab_recent_label" />

            <android.support.design.widget.TabItem
                android:id="@+id/profile_tab_favorites_label_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_profile_tab_favorites_label" />


        </android.support.design.widget.TabLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/profile_tab_fragment_container_id"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs" />

        <ImageView
            android:id="@+id/j"
            android:layout_width="157dp"
            android:layout_height="188dp"

            android:layout_marginStart="172dp"
            android:layout_marginLeft="172dp"
            app:layout_constraintBottom_toBottomOf="@+id/profile_tab_fragment_container_id"
            app:layout_constraintStart_toStartOf="@+id/profile_tab_fragment_container_id"
            app:srcCompat="@drawable/ic_location_on_grey_24dp" />


    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>